Replace get(0) with getFirst()
Required for refaster rules to pass